vaultwarden-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
    part-of: vaultwarden
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
    keel.sh/approvals: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
      part-of: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        part-of: vaultwarden
    spec:
      serviceAccountName: vaultwarden
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - name: vaultwarden
          containerPort: 80
        readinessProbe:
          tcpSocket:
            port: vaultwarden
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: vaultwarden
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        volumeMounts:
        - name: vaultwarden
          mountPath: /data
        - name: vaultwarden-secrets
          mountPath: "/mnt/vault"
          readOnly: true
      volumes:
      - name: vaultwarden
        persistentVolumeClaim:
          claimName: vaultwarden
      - name: vaultwarden-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "vaultwarden"
