vaultwarden-ldap-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden-ldap
  labels:
    app: vaultwarden-ldap
    part-of: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden-ldap
      part-of: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden-ldap
        part-of: vaultwarden
    spec:
      serviceAccountName: vaultwarden
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      containers:
      - name: vaultwarden-ldap
        image: vividboarder/vaultwarden_ldap:0.6
        volumeMounts:
        - name: vaultwarden-secrets
          mountPath: "/mnt/vault"
          readOnly: true
      volumes:
      - name: vaultwarden-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "vaultwarden"
