vaultwarden-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: vaultwarden
  selector:
    app: vaultwarden
    part-of: vaultwarden
