vaultwarden-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <path:apps-kv/data/vaultwarden/config#HOST>
    http:
      paths:
      - path: /#/
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
  tls:
  - hosts:
    - <path:apps-kv/data/vaultwarden/config#HOST>
